# prl_ur5_robot

./: .gitignore  .gitmodules  LICENSE  README.md  prl_ur5_robot.rosinstall
prl_ur5_control/: CMakeLists.txt  README.md  package.xml
prl_ur5_control/config/: left_arm_controllers.yaml  right_arm_controllers.yaml
prl_ur5_control/launch/: control.launch  sensors.launch  standart_setup_control.launch.xml  standart_setup_gripper_control.launch.xml  standart_setup_sensors.launch.xml
prl_ur5_control/scripts/: fake_gripper_controller.py  ft_sensor_node.py  gripper_controller_launcher.sh
prl_ur5_demos/: CMakeLists.txt  README.md  package.xml  setup.py
prl_ur5_demos/models/: coke_can.dae  coke_can.stl  coke_can.urdf
prl_ur5_demos/scripts/: group_info.py  move_arm.py  move_both_arms.py  move_gripper.py  pick_and_place.py  test_pybullet.py
prl_ur5_demos/src/prl_ur5_demos/: utils.py
prl_ur5_description/: CMakeLists.txt  README.md  package.xml  urdf.rviz
prl_ur5_description/config/: standart_setup.yaml
prl_ur5_description/config/fixed_cameras/: dataset_collection.yaml  example.yaml  my_test.yaml
prl_ur5_description/config/kinematics/: ur5_left.yaml  ur5_right.yaml
prl_ur5_description/config/limits/: half_joint_limits.yaml
prl_ur5_description/launch/: test.launch  upload.launch
prl_ur5_description/model/: RG_connector_simple.stl  RG_connector_simple_convex.stl  vention_table.dae  vention_table.stl  vention_tower.dae  vention_tower.stl  vention_tower_bottom_convex.stl  vention_tower_middle_convex.stl  vention_tower_top_convex.stl
prl_ur5_description/urdf/: _camera_sensor.urdf.xacro  _d435.gazebo.xacro  _fixed_cameras.urdf.xacro  _force_sensor.urdf.xacro  _ft300.gazebo.xacro  _gripper.urdf.xacro  _ur5.urdf.xacro  prl_ur5.gazebo.xacro  prl_ur5.urdf.xacro  prl_ur5_robot.urdf.xacro
prl_ur5_gazebo/: CMakeLists.txt  README.md  package.xml
prl_ur5_gazebo/config/standart_setup/: controllers_config.yaml  gazebo_ros_control.yaml  gazebo_ros_control_pos.yaml  gazebo_ros_control_vel.yaml  position_controllers.yaml
prl_ur5_gazebo/launch/: gazebo.launch
prl_ur5_gazebo/worlds/: default.world
prl_ur5_moveit_config/: CMakeLists.txt  README.md  package.xml
prl_ur5_moveit_config/config/standart_setup/: chomp_planning.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  prl_ur5_robot.srdf  prl_ur5_robot.srdf.xacro  ros_controllers.yaml  ros_controllers_pos.yaml  ros_controllers_vel.yaml  servo_server.yaml  stomp_planning.yaml  trajopt_planning.yaml
prl_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  lerp_planning_pipeline.launch.xml  move_group.launch  moveit.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl-stomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  prl_ur5_robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  servo_server.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  trajopt_planning_pipeline.launch.xml  warehouse.launch
prl_ur5_moveit_config/scripts/: init_planning_scene.py
prl_ur5_robot/: CMakeLists.txt  package.xml
prl_ur5_run/: CMakeLists.txt  README.md  package.xml
prl_ur5_run/launch/: demo.launch  real.launch  sim.launch
prl_ur5_run/scripts/: record_usbcam.sh
