<?xml version="1.0"?>
<package format="2">
  <name>prl_ur5_description</name>
  <version>1.0.0</version>
  <description>prl_ur5_description provides a description of the UR5 bimanual robot from the Inria Paris Robotics Lab</description>

  <maintainer email="igor.kalevatykh@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>MIT</license>

  <url type="repository">https://github.com/inria-paris-robotics-lab/prl_ur5_robot</url>
  <url type="bugtracker">https://github.com/inria-paris-robotics-lab/prl_ur5_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>onrobot_description</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robotiq_ft_sensor</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>prl_ur5_robot_configuration</exec_depend>
  <exec_depend>gazebo_ros_control_select_joints</exec_depend>
</package>
