<?xml version="1.0"?>
<package format="2">
  <name>prl_ur5_robot</name>
  <version>0.1.0</version>
  <description>prl_ur5_robot is a metapackage for all PRL UR5 ROS packages</description>

  <maintainer email="etienne.arlaud@inria.fr">Etienne Arlaud</maintainer>
  <author email="etienne.arlaud@inria.fr">Etienne Arlaud</author>

  <license>MIT</license>

  <url type="repository">https://github.com/inria-paris-robotic-lab/prl_ur5_robot</url>
  <url type="bugtracker">https://github.com/inria-paris-robotic-lab/prl_ur5_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>prl_ur5_control</exec_depend>
  <exec_depend>prl_ur5_demos</exec_depend>
  <exec_depend>prl_ur5_description</exec_depend>
  <exec_depend>prl_ur5_gazebo</exec_depend>
  <exec_depend>prl_ur5_moveit_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>